--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Git test document</title>
 </head>
 <body>
-    
+    <div class="header">
+        Hej och Välkommen!
+    </div>
 </body>
 </html>
